// service_data structs
message UsualData {
	Direction direction = 1;
	uint64 conversation_id = 2;
  uint64 message_id = 3;
}

// chat messages
message ChatMessageNewOrder {
  uint64 pay_id = 1;
  uint64 amount = 2;
  Currency currency = 3;
}

message ChatMessagePaymentFinished {
  uint64 pay_id = 1;
  bool success = 3;
  bool failure = 4;
  uint64 amount = 5;
  Currency currency = 6;
  Direction direction = 7;
}

message ChatMessageOrderCancelled {
  uint64 pay_id = 1;
  uint64 user_id = 2;
}
